[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "pypbee"
dynamic         = ["version"]
description     = "Performance-Based Earthquake Engineering toolkit"
readme          = "README.md"
requires-python = ">=3.12"
license         = "MIT"
authors         = [{name = "Angshuman Deb", email = "angshuman311@gmail.com"}]

dependencies = [
    "numpy>=1.26",
    "scipy>=1.15",
    "matplotlib>=3.8.2",
    "pygmm>=0.7.1",
    "numba>=0.62",
    "pathos>=0.3.4",
    "pydoe3>=1.0.4",
    "xlrd>=2.0.1",
    "eqsig>=1.2.17",
    "openpyxl>=3.1.5",
    "python-benedict>=0.35.0",
    "openseespy"
]

[tool.setuptools.dynamic]
version = { attr = "pypbee._version.__version__" }

[tool.setuptools.packages.find]
include = ["pypbee*"]

[project.urls]
Homepage = "https://github.com/angshuman311/PyPBEE"
